umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@mdldraw_20q.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: extended_molecule
category: extended_molecule
molecule:
  success: false
  error:
    error_type: InvalidBondLine
    message: "Invalid bond line at line 23, col 18"
molecule_lenient:
  success: false
  error:
    error_type: InvalidBondLine
    message: "Invalid bond line at line 23, col 18"
extended_molecule:
  success: true
  extended_summary:
    sum_formula: C13F3NO2
    atom_count: 19
    bond_count: 19
    extended_atoms: 0
    extended_bonds: 19
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C13F3NO2
    atom_count: 19
    bond_count: 19
    extended_atoms: 0
    extended_bonds: 19
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
